# Synapse

./: .gitignore  CNAME  LICENSE  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
cli/: proxima-cli.cjs  synapse-cli.cjs
electron/: browser-manager.cjs  index-v2.html  main-v2.cjs  package.json  preload.cjs  provider-api.cjs  provider-preload.cjs  rest-api.cjs  ws-server.cjs
electron/providers/: chatgpt-engine.js  claude-engine.js  deepseek-engine.js  gemini-engine.js  kimi-engine.js  perplexity-engine.js
frontend/: package-lock.json
frontend/src/: App.svelte  Spotlight.svelte
sdk/: synapse.js  synapse.py
src/: mcp-server-v3.js
src-rust/: Cargo.toml
src-rust/src/: bridge.rs  ipc_server.rs  main.rs  ollama.rs  rag.rs  rest_server.rs  ws_server.rs
